# codescope

./: .dockerignore  .gitignore  .mcp.json  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  TODOS.md  deny.toml  install.ps1  install.sh  setup-claude.ps1  setup-claude.sh
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: _SHARED.md  bench-champion.md  context-optimizer.md  doctor-diagnostician.md  graph-architect.md  knowledge-librarian.md  lsp-bridge-lead.md  mcp-tool-curator.md  parser-specialist.md  project-maintainer.md  release-captain.md  web-ui-designer.md
.claude/reviews/: _CONSOLIDATED.md  ada-report.md  chomsky-report.md  dewey-report.md  hopper-report.md  knuth-report.md  linnaeus-report.md  nightingale-report.md  ranganathan-report.md  shannon-report.md  turing-report.md  victor-report.md
.claude/rules/: codescope-mandatory.md
.claude/skills/demo/: SKILL.md
.claude/skills/lint-all/: SKILL.md
.claude/skills/mcp-test/: SKILL.md
.claude/skills/ship/: SKILL.md
.claude/skills/status/: SKILL.md
.claude/skills/tool-audit/: SKILL.md
.github/workflows/: ci.yml  release.yml
Formula/: codescope.rb
assets/: demo-animation.html  frames-to-gif.mjs  record-demo.mjs
configs/: README.md  codex-cli.yaml  cursor.json  zed.json
crates/bench/: Cargo.toml
crates/bench/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli_def.rs  db.rs  lib.rs  main.rs
crates/cli/src/commands/: agents.rs  daemon.rs  doctor.rs  embed.rs  gain.rs  history.rs  hooks.rs  hotspots.rs  index.rs  ingest.rs  ingest_conversations.rs  init.rs  insight.rs  install.rs  languages.rs  migrate.rs  migrate_to_server.rs  mod.rs  purge_indexed.rs  query.rs  repair.rs  review.rs  search.rs  search_content.rs  semantic_search.rs  serve.rs  session.rs  stats.rs  supervisor.rs  sync_history.rs  upgrade.rs
crates/cli/src/compress/: cargo.rs  cat.rs  docker.rs  git.rs  grep.rs  head_tail.rs  ls.rs  mod.rs  npm.rs  passthrough.rs  pytest.rs  tsc.rs
crates/cli/tests/: parse_tests.rs
crates/core/: Cargo.toml
crates/core/src/: compact.rs  daemon.rs  db.rs  gain.rs  indexed.rs  insight.rs  lib.rs  llm.rs
crates/core/src/conversation/: classifier.rs  compressor.rs  entity_linker.rs  mod.rs  parser.rs
crates/core/src/crossrepo/: linker.rs  mod.rs
crates/core/src/embeddings/: fastembed_provider.rs  mod.rs  ollama.rs  openai.rs  pipeline.rs  provider.rs
crates/core/src/graph/: builder.rs  incremental.rs  migrations.rs  mod.rs  query.rs  schema.rs
crates/core/src/parser/: extractor.rs  languages.rs  mod.rs
crates/core/src/parser/content/: dockerfile_parser.rs  env_parser.rs  gradle_parser.rs  json_parser.rs  markdown_parser.rs  mod.rs  openapi_parser.rs  package_parser.rs  proto_parser.rs  sql_parser.rs  terraform_parser.rs  toml_parser.rs  yaml_parser.rs
crates/core/src/temporal/: evolution.rs  git.rs  graph_sync.rs  mod.rs
crates/core/tests/: cuda_parser_tests.rs  db_tests.rs  embedding_tests.rs  integration_tests.rs  migration_tests.rs  real_conversation_test.rs  remote_connect_spike.rs  tool_query_tests.rs
crates/e2e/: Cargo.toml
crates/e2e/src/: lib.rs
crates/e2e/tests/: smoke_cli.rs  smoke_multiproject.rs  smoke_server.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: lib.rs  main.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: daemon.rs  error.rs  helpers.rs  index_state.rs  indexing.rs  lib.rs  main.rs  nlp.rs  params.rs  server.rs  telemetry.rs  watcher.rs
crates/mcp-server/src/resources/: mod.rs
crates/mcp-server/src/tools/: admin.rs  adr.rs  analytics.rs  analyze.rs  ask.rs  callgraph.rs  contributors.rs  conversations.rs  embeddings.rs  exploration.rs  http.rs  indexed.rs  knowledge.rs  memory.rs  mod.rs  quality.rs  query.rs  refactor.rs  review.rs  sandbox.rs  search.rs  skills.rs  temporal.rs
crates/mcp-server/tests/: graph_query_tests.rs  helpers_tests.rs
crates/web/: Cargo.toml
crates/web/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
crates/web/frontend/src/: App.tsx  api.ts  index.tsx  store.ts  styles.css
crates/web/frontend/src/components/: ArchiveView.tsx  CirclePack.tsx  ClusterView.tsx  CommandPalette.tsx  ConvPanel.tsx  DepthSlider.tsx  DreamGraph3D.tsx  DreamPage.tsx  DreamPlaceholder.tsx  FileTree.tsx  FilterPanel.tsx  Graph3D.tsx  HotspotChart.tsx  InsightPage.tsx  Legend.tsx  Minimap.tsx  NodeInspector.tsx  PhysicsPanel.tsx  ProjectSwitcher.tsx  RightPanel.tsx  ShortcutHelp.tsx  Sidebar.tsx  SourceViewer.tsx  TopBar.tsx
crates/web/frontend/src/utils/: colors.ts  fuzzy.ts  keyboard.ts  markdown.ts
crates/web/src/: dream.rs  error.rs  lib.rs  main.rs
crates/web/static/: index.html
crates/web/tests/: api_tests.rs
docs/: llm-usage-guide.md  llms-full.txt  llms.txt  quickstart.md  troubleshooting.md
docs/integrations/: gsd.md
docs/launch/: blog-graph-first.md  hn-post.md  stop-ragging-your-codebase.md  tweet-thread.md
hooks/: codescope-bash-suggest.ps1  codescope-bash-suggest.sh
scripts/: check-update.ps1  check-update.sh  pre-commit
skills/autoresearch/: SKILL.md
skills/autoresearch/references/: program.md
skills/codescope/: SKILL.md
skills/codescope/references/: TOOLS.md
skills/cs-ask/: SKILL.md
skills/cs-file/: SKILL.md
skills/cs-impact/: SKILL.md
skills/cs-query/: SKILL.md
skills/cs-query/references/: SURREALQL.md
skills/cs-search/: SKILL.md
skills/cs-stats/: SKILL.md
skills/cs-update/: SKILL.md
skills/wiki-ingest/: SKILL.md
skills/wiki-lint/: SKILL.md
skills/wiki-query/: SKILL.md
templates/: CLAUDE.md  settings.json
templates/skills/codescope/: SKILL.md
templates/skills/cs-callers/: SKILL.md
templates/skills/cs-index/: SKILL.md
templates/skills/cs-query/: SKILL.md
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
