[workspace]
members = ["crates/core", "crates/mcp-server", "crates/cli", "crates/bench", "crates/web"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT"
authors = ["Onur Gokyildiz"]
description = "Rust-native code intelligence engine powered by SurrealDB knowledge graphs"
repository = "https://github.com/onurgokyildiz/codescope"
homepage = "https://github.com/onurgokyildiz/codescope"
keywords = ["code-analysis", "graph-database", "mcp", "rag", "surrealdb"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# Database
surrealdb = { version = "3.0", default-features = false, features = ["kv-surrealkv"] }

# Parsing
tree-sitter = "0.25"

# MCP
rmcp = { version = "1.3", features = ["server", "transport-io", "transport-streamable-http-server"] }

# Async
tokio = { version = "1", features = ["full"] }

# Git
git2 = "0.20"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# Hashing
sha2 = "0.10"
hex = "0.4"

# File walking
walkdir = "2"
ignore = "0.4"

# Parallel processing
rayon = "1.11"

# JSON Schema (for MCP tool parameters)
schemars = "1"

# Web server
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }

# Local embeddings (in-process, no external service needed)
fastembed = "5"

# File watching
notify = "8"
notify-debouncer-mini = "0.7"

# === Binary size optimization ===
[profile.release]
opt-level = "z"        # Optimize for size (not speed)
lto = true             # Link-Time Optimization — cross-crate dead code elimination
codegen-units = 1      # Single codegen unit — better LTO, smaller binary
strip = true           # Strip debug symbols
panic = "abort"        # No unwinding = smaller binary
