[package]
name = "codescope-bench"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
codescope-core = { path = "../core" }
surrealdb = { workspace = true, features = ["kv-mem"] }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ignore = { workspace = true }
walkdir = { workspace = true }
