[package]
name = "codescope"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codescope-core = { path = "../core" }
surrealdb = { workspace = true }
ignore = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
dirs = "5"
rayon = { workspace = true }
