[package]
name = "codescope"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codescope_cli"
path = "src/lib.rs"

[[bin]]
name = "codescope"
path = "src/main.rs"

[dependencies]
codescope-core = { path = "../core" }
codescope-mcp = { path = "../mcp-server" }
codescope-web = { path = "../web" }
codescope-lsp = { path = "../lsp" }
tower-lsp = "0.20"
surrealdb = { workspace = true }
ignore = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "5"
rayon = { workspace = true }
rmcp = { workspace = true }
tokio-util = "0.7"
axum = { workspace = true }
reqwest = { workspace = true }
