[package]
name = "codescope-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
surrealdb = { workspace = true }
tree-sitter = { workspace = true }
tokio = { workspace = true }
git2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }

# Tree-sitter language grammars
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-dart = "0.1"
tree-sitter-scala = "0.25"
tree-sitter-lua = "0.5"
tree-sitter-zig = "1.1"
tree-sitter-elixir = "0.3"
tree-sitter-haskell = "0.23"

# Config parsing
serde_yaml = "0.9"
toml = "0.8"

# Local embeddings
fastembed = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
