[package]
name = "codescope-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
surrealdb = { workspace = true }
tree-sitter = { workspace = true }
tokio = { workspace = true }
git2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
fastembed = { workspace = true }
reqwest = { workspace = true }

# Tree-sitter language grammars
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-dart = "0.1"
tree-sitter-scala = "0.25"
tree-sitter-lua = "0.5"
tree-sitter-zig = "1.1"
tree-sitter-elixir = "0.3"
tree-sitter-haskell = "0.23"
tree-sitter-ocaml = "0.24"
tree-sitter-html = "0.23"
tree-sitter-julia = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-r = "1"
tree-sitter-css = "0.23"
tree-sitter-erlang = "0.9"
tree-sitter-objc = "3"
tree-sitter-hcl = "1"
tree-sitter-nix = "0.3"
tree-sitter-cmake = "0.5"
tree-sitter-make = "1"
tree-sitter-verilog = "1"
tree-sitter-fortran = "0.5"
tree-sitter-glsl = "0.2"
tree-sitter-graphql = "0.1"

# Config parsing
serde_yaml = "0.9"
toml = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
surrealdb = { workspace = true, features = ["kv-mem"] }
serde = { workspace = true }
tempfile = "3"
