[package]
name = "codescope-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
surrealdb = { workspace = true }
tree-sitter = { workspace = true }
tokio = { workspace = true }
git2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
fastembed = { workspace = true }
reqwest = { workspace = true }

# Tree-sitter language grammars
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.24"
tree-sitter-swift = "0.7.1"
tree-sitter-dart = "0.1"
tree-sitter-scala = "0.25"
tree-sitter-lua = "0.5"
tree-sitter-zig = "1.1.2"
tree-sitter-elixir = "0.3.5"
tree-sitter-haskell = "0.23.1"
tree-sitter-ocaml = "0.24.2"
tree-sitter-html = "0.23.2"
tree-sitter-julia = "0.23.1"
tree-sitter-bash = "0.25"
tree-sitter-r = "1.2"
tree-sitter-css = "0.25"
tree-sitter-erlang = "0.15"
tree-sitter-objc = "3.0.2"
tree-sitter-hcl = "1.1"
tree-sitter-nix = "0.3"
tree-sitter-cmake = "0.7"
tree-sitter-make = "1.1"
tree-sitter-verilog = "1.0.3"
tree-sitter-fortran = "0.5.1"
tree-sitter-glsl = "0.2"
tree-sitter-graphql = "0.1"

# Additional languages
tree-sitter-d = "0.8"
tree-sitter-solidity = "1.2"
tree-sitter-gdscript = "6.1"
tree-sitter-elm = "5.9"
tree-sitter-groovy = "0.1"
tree-sitter-pascal = "0.10"
tree-sitter-ada = "0.1"
tree-sitter-commonlisp = "0.4"
tree-sitter-scheme = "0.24"
tree-sitter-racket = "0.24"
tree-sitter-xml = "0.7"
tree-sitter-proto = "0.4"

# Config parsing
serde_yaml = "0.9"
toml = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
surrealdb = { workspace = true, features = ["kv-mem"] }
serde = { workspace = true }
tempfile = "3"
