[package]
name = "codescope-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["full"]
full = ["codescope-core/full", "git2", "reqwest"]
embeddings = ["codescope-core/embeddings"]
git = ["codescope-core/git", "git2"]
http = ["codescope-core/http", "reqwest"]
lite = []  # No optional deps — smallest binary

[dependencies]
codescope-core = { path = "../core", default-features = false }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
schemars = { workspace = true }
surrealdb = { workspace = true }
ignore = { workspace = true }
dirs = "5"
chrono = "0.4"
rayon = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }

# Optional deps (gated by features)
git2 = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
