[package]
name = "codescope-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codescope_mcp"
path = "src/lib.rs"

[[bin]]
name = "codescope-mcp"
path = "src/main.rs"

[dependencies]
codescope-core = { path = "../core" }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
schemars = { workspace = true }
surrealdb = { workspace = true }
ignore = { workspace = true }
git2 = { workspace = true }
dirs = "5"
reqwest = { workspace = true }
chrono = "0.4"
rayon = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
