[package]
name = "codescope-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codescope_mcp"
path = "src/lib.rs"

[[bin]]
name = "codescope-mcp"
path = "src/main.rs"

[dependencies]
codescope-core = { path = "../core" }
codescope-web = { path = "../web" }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
schemars = { workspace = true }
surrealdb = { workspace = true }
ignore = { workspace = true }
git2 = { workspace = true }
dirs = "5"
reqwest = { workspace = true }
chrono = "0.4"
rayon = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
tokio-util = "0.7"
axum = { workspace = true }

[dev-dependencies]
# graph_query_tests.rs uses the in-memory SurrealDB engine for fast
# isolated tests. Lives in dev-dependencies so production binaries
# don't pull in the extra backend.
surrealdb = { workspace = true, features = ["kv-mem"] }
