[package]
name = "codescope-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codescope_web"
path = "src/lib.rs"

[[bin]]
name = "codescope-web"
path = "src/main.rs"

[dependencies]
codescope-core = { path = "../core" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
surrealdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
dirs = "5"
rayon = { workspace = true }
ignore = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
